Add Animals API methods
